# abgabe4

./: .pdm-python  README.md  ekgdata.py  main.py  person.py  pyproject.toml
