[project]
name = "abgabe4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JonPer00", email = "pj1959@mci4me.at"},
]
dependencies = ["numpy>=2.2.6", "streamlit>=1.45.1", "plotly>=6.1.2", "matplotlib>=3.10.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
